# openai-wrapper

./: README.md  pyproject.toml  run.py  setup.py
src/openai_client/: __init__.py  __main__.py
src/openai_client/config/: config.py
src/openai_client/openai/: api.py  client.py  models.py
